--- a/spd_dump.vcxproj.filters
+++ b/spd_dump.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="GITVER.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Lib\libusb-1.0\libusb.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
