--- a/spd_dump.vcxproj
+++ b/spd_dump.vcxproj
@@ -119,7 +119,7 @@ echo #define GIT_VER "%GIT_VER%"&gt;"$(ProjectDir)GITVER.h"
 echo #define GIT_SHA1 "%GIT_SHA1%"&gt;&gt;"$(ProjectDir)GITVER.h"</Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>copy /y Lib\Channel.ini "$(TargetDir)"
+      <Command>copy /y Lib\Channel_Debug.ini "$(TargetDir)\Channel.ini"
 copy /y Lib\Channel9.dll "$(TargetDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
